--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "py_simple_history"
 authors = [{name = "Andrew Spangler", email = "AndrewSpangler@users.noreply.github.com"}]
 version = "0.0.1"
-description = "A short project description."
+description = "A super simple history tracking class / mixin."
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = ['Development Status :: 1 - Planning', 'Environment :: Console', 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)', 'Natural Language :: English', 'Operating System :: OS Independent', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3.8', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10']
